--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -54,3 +54,6 @@
   - title: Jupyter notebooks
     url: /features/notebooks
     not_numbered: true
+  - title: Index
+    url: /features/index
+    not_numbered: true
