--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -22,14 +22,9 @@
 # See the links below for an example.
 
 # Top-level page
-- title: Home
+- title: Introducción
   url: /index
   not_numbered: true
-
-
-# Adds a searchbar link
-- title: Search
-  search: true
 
 # Divider for meta-pages and content page
 - divider: true
@@ -41,7 +36,7 @@
 - title: Interpolation
   url: /features/interpolation
   not_numbered: false
-  expand_sections: true
+  expand_sections: false
   sections:
   - title: Hemite interpolation
     url: /features/interpolation_details
