--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -22,7 +22,7 @@
 # See the links below for an example.
 
 # Top-level page
-- title: Introducción
+- title: Introduction
   url: /index
   not_numbered: true
 
